Fix the layout issue in Callout section.

--- a/css/styles.css
+++ b/css/styles.css
@@ -928,5 +928,5 @@ a {
 
 /* Putting Components Together */
 .callout-section {
-  margin: 3rem;
+  margin: 3rem auto;
 }
